Added the Drawer Component
-Added the Drawer component which is attached to the App Bar which allows you to navigate the website
-Added Links which add contact information to the website
-Changed some styling in the Components for mobile responsiveness

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,9 @@ code {
 .MuiButton-root {
   height: 3.7rem;
 }
+.MuiLink-root {
+  text-decoration: "none";
+}
 
 @media only screen and (max-width: 960px) {
   .MuiButton-root {
